<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_launch_postion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_launcher_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/flight_number"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="@+id/iv_launch_postion"
            app:layout_constraintStart_toStartOf="@+id/iv_launch_postion"
            app:layout_constraintTop_toBottomOf="@+id/iv_launch_postion" />

        <TextView
            android:id="@+id/tv_flight_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textSize="24dp"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/flight_mission_name"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_flight_number"
            app:layout_constraintStart_toStartOf="@+id/tv_flight_number"
            app:layout_constraintTop_toBottomOf="@+id/tv_flight_number" />

        <TextView
            android:id="@+id/tv_mission_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FalconSat"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/flight_launch_date"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_mission_name"
            app:layout_constraintStart_toStartOf="@+id/tv_mission_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_mission_name" />

        <TextView
            android:id="@+id/tv_launch_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="25/03/2006"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/flight_launch_site"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_launch_date"
            app:layout_constraintStart_toStartOf="@+id/tv_launch_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_launch_date" />

        <TextView
            android:id="@+id/tv_launch_site"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kwajaiein Atoil"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_cores"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_launch_site">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_cores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_expand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/baseline_keyboard_arrow_down_black_24"
                        app:layout_constraintBottom_toTopOf="@+id/textView14"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="#CCCCCC"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/flight_cores"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="#CCCCCC"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView13" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_expand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_core_serial"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="Merlin1A"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/flight_cores_block"
                        app:layout_constraintEnd_toStartOf="@+id/textView17"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_core_serial" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/flight_cores_flight"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView16"
                        app:layout_constraintTop_toTopOf="@+id/textView16" />

                    <TextView
                        android:id="@+id/tv_cores_block"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No info"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="@+id/textView16"
                        app:layout_constraintStart_toStartOf="@+id/textView16"
                        app:layout_constraintTop_toBottomOf="@+id/textView16" />

                    <TextView
                        android:id="@+id/tv_cores_flight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="@+id/textView17"
                        app:layout_constraintStart_toStartOf="@+id/textView17"
                        app:layout_constraintTop_toBottomOf="@+id/textView17" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/flight_cores_reused"
                        app:layout_constraintEnd_toEndOf="@+id/tv_cores_block"
                        app:layout_constraintStart_toStartOf="@+id/tv_cores_block"
                        app:layout_constraintTop_toBottomOf="@+id/tv_cores_block" />

                    <TextView
                        android:id="@+id/tv_cores_reused"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="No"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/textView20"
                        app:layout_constraintStart_toStartOf="@+id/textView20"
                        app:layout_constraintTop_toBottomOf="@+id/textView20" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/flight_cores_landing"
                        app:layout_constraintEnd_toEndOf="@+id/tv_cores_flight"
                        app:layout_constraintStart_toStartOf="@+id/tv_cores_flight"
                        app:layout_constraintTop_toBottomOf="@+id/tv_cores_flight" />

                    <TextView
                        android:id="@+id/tv_cores_landing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No info"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="@+id/textView22"
                        app:layout_constraintStart_toStartOf="@+id/textView22"
                        app:layout_constraintTop_toBottomOf="@+id/textView22" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>